Updated required for Java 11